cart page with calculation and of tax giftcard redeem
