# storage/api-docs/api-docs.json
@@ -496,6 +496,46 @@
                 }
             }
         },
+        "/gift-card-validate": {
+            "post": {
+                "tags": [
+                    "Gift-Cards"
+                ],
+                "summary": "For Gift Card Search ",
+                "operationId": "3dabbc437a258f5884f06d84d55f3273",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "giftcardnumber": {
+                                        "type": "string",
+                                        "example": "FEMS-2024-8147"
+                                    },
+                                    "user_token": {
+                                        "type": "string",
+                                        "example": "FOREVER-MEDSPA"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Result Found"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
         "/gift-card-redeem": {
             "post": {
                 "tags": [
